[package]
name = "lndwn"
version = "0.1.0"
authors = ["Rob Clarke <kumo@kumo.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.5.9"
